--- a/index.html
+++ b/index.html
@@ -1,10 +1,197 @@
 <html>
     <head>
-        <link href="./static/styles/style.css"  type="text/css" rel="stylesheet"/>
+        <link href="static/styles/style.css"  type="text/css" rel="stylesheet"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
+        <script src="static/js/byite.js"></script>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="wrapper">
-            
+            <div id="header-wrapper">
+                <div id="header-bg">
+                </div>
+                <div id="header-logo-wrapper">
+                    <img class="header-logo" src="static/img/byite-logo-color.svg"/>
+                </div>
+                <div>
+                    <div class="nav-wrapper">
+                        <nav id="site-nav">
+                            <a class="nav-item" href="projects.html">Projects</a>
+                            <a class="nav-item" href="blog.html">Blog</a>
+                            <a class="nav-item nav-item-last" href="contact.html">Contact</a>
+                        </nav>
+                        <div id="nav-background">
+                            <img id="mobile-nav-cookie" src="static/img/cookie-watermark-left.png"/>
+                            <img id=""/>
+                        </div>
+                    </div>
+                    <div id="menu-toggle">
+                        <div class="hamburger">
+                            <div class="menu" onclick="setMenu(this);">
+                                <div class="menu_line menu_line-q"></div>
+                                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewbox="0 0 80 80">
+                                    <path class="path-a" d="M 24 26 h 36 a 14 14 0 0 1 -6 28 l -28 -28" />
+                                    <path class="path-a" d="M 56 54 h -36 a 14 14 0 0 1 6 -28 l 28 28" />
+                                </svg>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div id="page-wrapper">
+                <!-- Page 1 -->
+                <div class="page full-height col-2" id=page1>
+                    <div id="landing-text-wrapper">
+                        <div>
+                            <h1>Take a byite out of something new.</h1>
+                        </div>
+                        <div>
+                            <h4>From web development to data analysis and more! We leverage the latest technology to help your business stand out and perform.</h3>
+                        </div>
+                    </div>
+                    <div id="landing-logo-container">
+                        <img id="landing-logo" src="static/img/byite-logo-color.svg"/>
+                    </div>
+                </div>
+                
+                <!-- Page 2 -->
+                <div class="page full-height" id=page2>
+                    <div id="capabilities-logos">
+                        <div class="capability">
+                            <div class="capability-text"><strong>AWS cloud</strong></div>
+                            <div class="capability-logo-container"><img class="capability-logo" src="static/img/aws-logo.svg"/></div>
+                        </div>
+                        <div class="capability">
+                            <div class="capability-text"><strong>Python</strong></div>
+                            <div class="capability-logo-container"><img class="capability-logo" src="static/img/python-logo.svg"/></div>
+                        </div>
+                        <div class="capability">
+                            <div class="capability-text"><strong>Django framework</strong></div>
+                            <div class="capability-logo-container"><img class="capability-logo" src="static/img/django_logo.svg"/></div>
+                        </div>
+                        <div class="capability">
+                            <div class="capability-text"><strong>Postgres</strong></div>
+                            <div class="capability-logo-container"><img class="capability-logo" src="static/img/postgres-logo.svg"/></div>
+                        </div>
+                        <div class="capability">
+                            <div class="capability-text"><strong>Github</strong></div>
+                            <div class="capability-logo-container"><img class="capability-logo" src="static/img/github-logo.svg"/></div>
+                        </div>
+                        <div class="capability">
+                            <div class="capability-text"><strong>Javascript</strong></div>
+                            <div class="capability-logo-container"><img class="capability-logo" src="static/img/js-logo.svg"/></div>
+                        </div>
+                        <div class="capability">
+                            <div class="capability-text"><strong>SQL server and BI stack</strong></div>
+                            <div class="capability-logo-container"><img class="capability-logo" src="static/img/sql-server-logo.svg"/></div>
+                        </div>
+                        <div class="capability">
+                            <div class="capability-text"><strong>Adobe cc</strong></div>
+                            <div class="capability-logo-container"><img class="capability-logo" src="static/img/cc-logo.svg"/></div>
+                        </div>
+                        <div class="capability">
+                            <div class="capability-text"><strong>Ubuntu</strong></div>
+                            <div class="capability-logo-container"><img class="capability-logo" src="static/img/ubuntu-logo.svg"/></div>
+                        </div>
+                    </div>
+                    <div id="capabilities-content">
+                        <h1>Technologies</h1>
+                        <h4>We specialise in technology. It is our goal to come up with the most creative solutions to your problems, no matter the technical approach!</h4>
+                    </div>
+                </div>
+                <!--<div class="page-transition">
+                    <img id="drip-transition-vector" src="assets/drip.svg"/>
+                </div>-->
+
+                <!-- Page 3 -->
+                <div class="page full-height" id="page3">
+                    <div id="projects-title">
+                        <h1>
+                            Projects
+                        </h1>
+                    </div>
+                    <div id="project-text-container">
+                        <div class="project-text" id="project-0-text">
+                            <h4 class="no-m-t">Kirkron</h4>
+                            Website development, Logo design as well as business account setup and management.
+                        </div>
+                        <div class="project-text" id="project-1-text">
+                            <h4 class="no-m-t">Tyler Place family resort</h4>
+                            End to end development of an internal web app for staff to simplify internal processes and improve reliability of resource assignment.
+                        </div>
+                        <div class="project-text" id="project-2-text">
+                            <h4 class="no-m-t">Want to know more?</h4>
+                            Contact us <a href=""><u>here</u></a> to see how we can help you!
+                        </div>
+                    </div>
+                    <div id="project-images-container">
+                        <div class="project-image" id="project-0-image">
+                            <img class="project-img" src="../kirkron//assets/logos/kirkron-365-banner.svg"/>
+                        </div>
+                        <div class="project-image" id="project-1-image">
+                            <img class="project-img" src="static/img/tpPortal-laptop.png"/>
+                        </div>
+                        <div class="project-image" id="project-2-image">
+                            <img class="project-img" src="static/img/tpPortal-phone.png"/>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Page 4 -->
+                <div class="page full-height" id="page4">
+                    <div class="w-50">
+                        <h1>Contact</h1>
+                    </div>
+                    <div class="w-50">
+                        <h1>Contact form</h1>
+                        <h3>Contact form will go here</h3>
+                    </div>
+                </div>
+
+            <div class="center-content-x white-bg">
+                <hr class="w-70">
+            </div>
+            <div class="col-3" id="footer-wrapper">
+                <div class="center-content-xy-sm m-t-md m-b-xl">
+                    <div>
+                        <img class="w-50" src="static/img/byite-logo-color.svg"/>
+                    </div>
+                    <div class="w-50 col-3-sm m-t-lg">
+                        <a class="center-self-x footer-icon" href="https://github.com/scott-j5"><img src="static/img/github-logo.svg"/></a>
+                        <a class="center-self-x footer-icon" href="https://www.linkedin.com/in/scottjames5"><img src="static/img/linkedin-logo.svg"/></a>
+                        <a class="center-self-x footer-icon" href="https://www.youtube.com/channel/UC84gV5HcQWphJ7lD7X0bXlA"><img src="static/img/youtube-logo.svg"/></a>
+                    </div>
+                </div>
+                <div class="m-t-md m-b-xl" id="footer-contact">
+                    <h4 class="no-m-t">
+                        <strong>Contact</strong>
+                    </h4>
+                    <p>
+                        <i class="fa fa-envelope-o fa-circle"></i> scottjames@byitegroup.com
+                    </p>
+                    <p>
+                        <i class="fa fa-mobile fa-circle"></i> +1 802 582 0170
+                    </p>
+                    <p>
+                        <i class="fa fa-map-marker fa-circle"></i> Vancouver, BC
+                    </p>
+                </div>
+                <div class="m-t-md m-b-xl">
+                    <h4 class="no-m-t">
+                        <strong>Subscribe</strong>
+                    </h4>
+                    <p>
+                        Sign up if you would like to be notified about new blog posts or other events.
+                    </p>
+                    <p>
+                        <div class="input-container">
+                            <input class="input-field" type="text" placeholder="Email" name="email"/>
+                            <i class="fa fa-paper-plane-o fa-input-icon"></i>
+                        </div>
+                    </p>
+                </div>
+            </div>
         </div>
     </body>
 </html>
