Updates to landing page styles

--- a/index.html
+++ b/index.html
@@ -100,25 +100,18 @@
                         <h4>We specialise in technology. It is our goal to come up with the most creative solutions to your problems, no matter the technical approach!</h4>
                     </div>
                 </div>
-                <!--<div class="page-transition">
-                    <img id="drip-transition-vector" src="assets/drip.svg"/>
-                </div>-->
 
                 <!-- Page 3 -->
-                <div class="page full-height" id="page3">
-                    <div id="projects-title">
-                        <h1>
-                            Projects
-                        </h1>
-                    </div>
+                <div class="page col-2 full-height" id="page3">
                     <div id="project-text-container">
+                        <h1 id="projects-title">Our work</h1>
                         <div class="project-text" id="project-0-text">
                             <h4 class="no-m-t">Kirkron</h4>
-                            Website development, Logo design as well as business account setup and management.
+                            Complete end-to-end business solution. From domain and hosting mangement using AWS to Website development & Office 365 configuration.
                         </div>
                         <div class="project-text" id="project-1-text">
                             <h4 class="no-m-t">Tyler Place family resort</h4>
-                            End to end development of an internal web app for staff to simplify internal processes and improve reliability of resource assignment.
+                            End-to-end development of a custom web app for staff to simplify internal processes and improve reliability of resource assignment.
                         </div>
                         <div class="project-text" id="project-2-text">
                             <h4 class="no-m-t">Want to know more?</h4>
@@ -127,7 +120,7 @@
                     </div>
                     <div id="project-images-container">
                         <div class="project-image" id="project-0-image">
-                            <img class="project-img" src="../kirkron//assets/logos/kirkron-365-banner.svg"/>
+                            <img class="project-img" src="static/img/kirkron-logo.svg"/>
                         </div>
                         <div class="project-image" id="project-1-image">
                             <img class="project-img" src="static/img/tpPortal-laptop.png"/>
@@ -135,17 +128,20 @@
                         <div class="project-image" id="project-2-image">
                             <img class="project-img" src="static/img/tpPortal-phone.png"/>
                         </div>
+                        <div>
+                            <img id="project-gears" src="static/img/gear-1.svg"/>
+                        </div>
                     </div>
                 </div>
 
                 <!-- Page 4 -->
-                <div class="page full-height" id="page4">
-                    <div class="w-50">
-                        <h1>Contact</h1>
+                <div class="page col-2 full-height" id="page4">
+                    <div class="hidden-md">
+                        
                     </div>
-                    <div class="w-70 center-self-x">
+                    <div class="w-70 w-100-sm center-self-x">
                         <form>
-                            <h1>Contact form</h1>
+                            <h1>Contact us</h1>
                             <div class="input-container">
                                 <input class="input-field" type="text" placeholder="Name" name="name"/>
                                 <i class="fa fa-user-o fa-input-icon"></i>
