--- a/blog.html
+++ b/blog.html
@@ -1,79 +1,107 @@
 <html>
     <head>
-        <link href="./static/styles/style.css"  type="text/css" rel="stylesheet"/>
+        <link href="static/styles/style.css"  type="text/css" rel="stylesheet"/>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://kit.fontawesome.com/0a28a489f1.js" crossorigin="anonymous"></script>
         <script src="static/js/byite.js"></script>
         <meta name="viewport" content="width=device-width, initial-scale=1">
     </head>
     <body>
         <div id="wrapper">
             <div id="header-wrapper">
+                <div id="header-bg">
+                </div>
                 <div id="header-logo-wrapper">
-                    <img class="header-logo" src="../byite/assets/logo vector-color.svg"/>
+                    <img class="header-logo" src="static/img/byite-logo-color.svg"/>
                 </div>
-                <div id="nav-wrapper">
-                    <nav>
-                        <a class="nav-item" href="projects.html">Projects</a>
-                        <a class="nav-item" href="blog.html">Blog</a>
-                        <a class="nav-item nav-item-last" href="contact.html">Contact</a>
-                    
-                        <div class="menu" onclick="setMenu(this);">
-                            <div class="menu_line menu_line-q"></div>
-                            <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewbox="0 0 80 80">
-                                <path class="path-a" d="M 24 26 h 36 a 14 14 0 0 1 -6 28 l -28 -28" />
-                                <path class="path-a" d="M 56 54 h -36 a 14 14 0 0 1 6 -28 l 28 28" />
-                            </svg>
-                        </div>
-                    </nav>
-                </div>
-            </div>
-            <div id="page-wrapper">
-                <div class="page" id=page1>
-                    <div id="landing-text-wrapper">
-                        <div>
-                            <h1>Take a byite out of something new.</h1>
-                        </div>
-                        <div>
-                            <h3>More than just web design and development. We leverage the latest technology to help your business stand out and perform.</h3>
+                <div>
+                    <div class="nav-wrapper">
+                        <nav id="site-nav">
+                            <a class="nav-item" href="projects.html">Projects</a>
+                            <a class="nav-item" href="blog.html">Blog</a>
+                            <a class="nav-item nav-item-last" href="contact.html">Contact</a>
+                        </nav>
+                        <div id="nav-background">
+                            <img id="mobile-nav-cookie" src="static/img/cookie-watermark-left.png"/>
+                            <img id=""/>
                         </div>
                     </div>
-                    <div id="landing-logo-container">
-                        <img id="landing-logo" src="../byite/assets/logo vector-color.svg"/>
-                    </div>
-                </div>
-
-                <div class="page" id="page2">
-                    <div>
-                        <div class="content-center">
-                            <div class="w-70">
-                                <div class="img-circle img-circle-container" id="about-me-img"><img class="img-circle-img" alt="image" src="../byite/assets/profile-img.jpg"/></div>
+                    <div id="menu-toggle">
+                        <div class="hamburger">
+                            <div class="menu" onclick="setMenu(this);">
+                                <div class="menu_line menu_line-q"></div>
+                                <svg xmlns="http://www.w3.org/2000/svg" version="1.1" viewbox="0 0 80 80">
+                                    <path class="path-a" d="M 24 26 h 36 a 14 14 0 0 1 -6 28 l -28 -28" />
+                                    <path class="path-a" d="M 56 54 h -36 a 14 14 0 0 1 6 -28 l 28 28" />
+                                </svg>
                             </div>
                         </div>
                     </div>
-                    <div>
-                        <h1>About me</h1>
-                        <h3>I like things and things</h3>
-                    </div>
                 </div>
-
-                <div class="page" id="page3">
-                    <div class="w-50">
-                        <h1>projects</h1>
+            </div>
+            <div id="page-wrapper">
+                <div class="page page-padded flex-y">
+                    <div class="blog-header col-2 w-50">
+                        <div class="center-self-xy">
+                            Author img
+                        </div>
+                        <div>
+                            <h1>Blog title.</h1>
+                        </div>
+                        <div class="center-self-x">
+                            <h5>Author name.</h5>
+                        </div>
+                        <div>
+                            <h5>Blog sub-heading.</h5>
+                        </div>
                     </div>
-                    <div class="w-50">
-                        <h1>Projects</h1>
-                        <h3>I like things and things</h3>
+                    <div class="blog-img">
+                        img frame top
+                        actual image
+                        img frame bottom
+                    </div>
+                    <div class="blog-content">
+
                     </div>
                 </div>
             </div>
 
-            <div id="footer-wrapper">
-                <div id="footer-logo">
-                    <img id="footer-logo" src="../byite/assets/logo vector-color.svg"/>
+            <div class="col-3" id="footer-wrapper">
+                <div class="center-content-xy-sm m-t-md m-b-xl">
+                    <div>
+                        <img class="w-50" id="footer-logo" src="static/img/byite-logo-color.svg"/>
+                    </div>
+                    <div class="w-50 space-evenly m-t-lg">
+                        <a class="center-self-x footer-icon" href="https://github.com/scott-j5"><img src="static/img/github-logo.svg"/></a>
+                        <a class="center-self-x footer-icon" href="https://www.linkedin.com/in/scottjames5"><img src="static/img/linkedin-logo.svg"/></a>
+                        <a class="center-self-x footer-icon" href="https://www.youtube.com/channel/UC84gV5HcQWphJ7lD7X0bXlA"><img src="static/img/youtube-logo.svg"/></a>
+                    </div>
                 </div>
-                <div id="footer-content">
-                    <h3>
-                        Contact info
-                    </h3>
+                <div class="m-t-md m-b-xl" id="footer-contact">
+                    <h4 class="no-m-t">
+                        <strong>Contact</strong>
+                    </h4>
+                    <p>
+                        <i class="fa fa-envelope-o fa-circle"></i> scottjames@byitegroup.com
+                    </p>
+                    <p>
+                        <i class="fa fa-mobile fa-circle"></i> +1 802 582 0170
+                    </p>
+                    <p>
+                        <i class="fa fa-map-marker fa-circle"></i> Vancouver, BC
+                    </p>
+                </div>
+                <div class="m-t-md m-b-xl">
+                    <h4 class="no-m-t">
+                        <strong>Subscribe</strong>
+                    </h4>
+                    <p>
+                        Sign up if you would like to be notified about new blog posts or other events.
+                    </p>
+                    <div class="input-container">
+                        <input class="input-field" type="text" placeholder="Email" name="email"/>
+                        <i class="fa fa-paper-plane-o fa-input-icon fa-input-icon-hover"></i>
+                    </div>
                 </div>
             </div>
         </div>
