--- a/blog.html
+++ b/blog.html
@@ -40,32 +40,39 @@
                 </div>
             </div>
             <div id="page-wrapper">
-                <div class="page page-padded flex-y">
-                    <div class="blog-header col-2 w-50">
-                        <div class="center-self-xy">
-                            Author img
+                <div class="page p-t-xxl flex-y">
+                    <div class="blog-header col-2 w-70 w-100-sm m-t-xxl">
+                        <div class="blog-author center-self-x-sm align-self-end w-35">
+                            <div class="img-circle img-circle-container"><img class="img-circle-img" alt="image" src="static/img/profile-img.jpg" /></div>
+                            <h5 class="m-t-lg text-center">Scott James</h5>
                         </div>
-                        <div>
-                            <h1>Blog title.</h1>
-                        </div>
-                        <div class="center-self-x">
-                            <h5>Author name.</h5>
-                        </div>
-                        <div>
-                            <h5>Blog sub-heading.</h5>
+                        <div class="center-content-y center-content-xy-sm">
+                            <div class="text-center-sm">
+                                <h1 class="no-m">Blog title.</h1>
+                                <h5>Blog sub-heading.</h5>
+                            </div>
                         </div>
                     </div>
-                    <div class="blog-img">
-                        img frame top
-                        actual image
-                        img frame bottom
+                    <div class="page m-t-xxl">
+                        <div><i class="fa fa-eye"></i> Views</div>
+                        <div><i class="fa fa-calendar"></i> Date</div>
+                        <div><i class="fa fa-clock"></i> Read time</div>
                     </div>
+                </div>
+                <div class="blog-img w-100 m-t-xxl">
+                    <img class="img-full-width blog-img-frame" src="static/img/blog-img-frame.svg"/>
+                    <img class="img-full-width blog-title-img" src="static/img/kirkron-logo.svg"/>
+                    <img class="img-full-width blog-img-frame-bottom" src="static/img/blog-img-frame.svg"/>
+                </div>
+                <div class="page m-t-xxl">
                     <div class="blog-content">
-
+                        Actual blog content
                     </div>
                 </div>
             </div>
-
+            <div class="center-content-x">
+                <hr class="w-70 m-t-xxl">
+            </div>
             <div class="col-3" id="footer-wrapper">
                 <div class="center-content-xy-sm m-t-md m-b-xl">
                     <div>
