Added v1 of blog list page

--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
         <div id="wrapper">
             <div id="header-wrapper">
                 <div id="header-bg">
+                    <img class="header-logo-blob" src="static/img/nav-logo-blob.svg"/>
                 </div>
                 <div id="header-logo-wrapper">
-                    <img class="header-logo" src="static/img/byite-logo-color.svg"/>
+                    <a href="index.html">
+                        <img class="header-logo" src="static/img/byite-logo-color.svg"/>
+                    </a>
                 </div>
                 <div>
                     <div class="nav-wrapper">
                         <nav id="site-nav">
-                            <a class="nav-item" href="projects.html">Projects</a>
+                            <a class="nav-item" href="index.html#page3">Projects</a>
                             <a class="nav-item" href="blog.html">Blog</a>
-                            <a class="nav-item nav-item-last" href="contact.html">Contact</a>
+                            <a class="nav-item nav-item-last" href="index.html#page4">Contact</a>
                         </nav>
                         <div id="nav-background">
                             <img id="mobile-nav-cookie" src="static/img/cookie-watermark-left.png"/>
