--- a/blog-list.html
+++ b/blog-list.html
@@ -45,31 +45,80 @@
             <div id="page-wrapper">
                 <div class="page p-t-xxl flex-y">
                     <div class="blog-header col-2 w-70 w-100-sm m-t-xxl">
-                        <div class="blog-author center-self-x-sm align-self-end w-35">
-                            <div class="img-circle img-circle-container"><img class="img-circle-img" alt="image" src="static/img/profile-img.jpg" /></div>
-                            <h5 class="m-t-lg text-center">Scott James</h5>
+                        <div class="blog-card flex-x">
+                            <div class="blog-card-text">
+                                <h3>Blog 1</h3>
+                                <p>Subheading</p>
+                                <div class="space-evenly">
+                                    <small><i class="fa fa-user"></i> Scott James</small>
+                                    <small><i class="fa fa-calendar"></i> Date</small>
+                                    <small><i class="fa fa-clock"></i> 4 min. read</small>
+                                </div>
+                            </div>
+                            <div class="blog-card-img">
+                                <div class="blog-card-img-overlay"></div>
+                                <img src="static/img/postgres-logo.svg"/>
+                            </div>
                         </div>
                         <div class="center-content-y center-content-xy-sm">
                             <div class="text-center-sm">
-                                <h1 class="no-m">Blog title.</h1>
-                                <h5>Blog sub-heading.</h5>
+                                <h1 class="no-m">Recent blogs</h1>
+                                <div class="input-container">
+                                    <input class="input-field" type="text" placeholder="Search blogs" name="search"/>
+                                    <i class="fa fa-search fa-input-icon fa-input-icon-hover"></i>
+                                </div>
                             </div>
                         </div>
                     </div>
-                    <div class="page m-t-xxl">
-                        <div><i class="fa fa-eye"></i> Views</div>
-                        <div><i class="fa fa-calendar"></i> Date</div>
-                        <div><i class="fa fa-clock"></i> Read time</div>
+                </div>
+                <div class="center-content-x">
+                    <hr class="w-70 m-t-xxl">
+                </div>
+                <div class="page blog-list col-3 col-2-md col-1-sm m-t-xxl">
+                    <div class="blog-card flex-x">
+                        <div class="blog-card-img">
+                            <div class="blog-card-img-overlay"></div>
+                            <img src="static/img/postgres-logo.svg"/>
+                        </div>
+                        <div class="blog-card-text">
+                            <h3>Blog 1</h3>
+                            <p>Subheading</p>
+                            <div class="space-evenly">
+                                <small><i class="fa fa-user"></i> Scott James</small>
+                                <small><i class="fa fa-calendar"></i> Date</small>
+                                <small><i class="fa fa-clock"></i> 4 min. read</small>
+                            </div>
+                        </div>
                     </div>
-                </div>
-                <div class="blog-img w-100 m-t-xxl">
-                    <img class="img-full-width blog-img-frame" src="static/img/blog-img-frame.svg"/>
-                    <img class="img-full-width blog-title-img" src="static/img/kirkron-logo.svg"/>
-                    <img class="img-full-width blog-img-frame-bottom" src="static/img/blog-img-frame.svg"/>
-                </div>
-                <div class="page m-t-xxl">
-                    <div class="blog-content">
-                        Actual blog content
+                    <div class="blog-card flex-x">
+                        <div class="blog-card-img">
+                            <div class="blog-card-img-overlay"></div>
+                            <img src="static/img/postgres-logo.svg"/>
+                        </div>
+                        <div class="blog-card-text">
+                            <h3>Blog 1</h3>
+                            <p>Subheading</p>
+                            <div class="space-evenly">
+                                <small><i class="fa fa-user"></i> Scott James</small>
+                                <small><i class="fa fa-calendar"></i> Date</small>
+                                <small><i class="fa fa-clock"></i> 4 min. read</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog-card flex-x">
+                        <div class="blog-card-img">
+                            <div class="blog-card-img-overlay"></div>
+                            <img src="static/img/postgres-logo.svg"/>
+                        </div>
+                        <div class="blog-card-text">
+                            <h3>Blog 1</h3>
+                            <p>Subheading</p>
+                            <div class="space-evenly">
+                                <small><i class="fa fa-user"></i> Scott James</small>
+                                <small><i class="fa fa-calendar"></i> Date</small>
+                                <small><i class="fa fa-clock"></i> 4 min. read</small>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
