refinements to blog list page and functionality of responsive grid components

--- a/blog.html
+++ b/blog.html
@@ -44,7 +44,7 @@
             </div>
             <div id="page-wrapper">
                 <div class="page p-t-xxl flex-y">
-                    <div class="blog-header col-2 w-70 w-100-sm m-t-xxl">
+                    <div class="blog-header col-2 col-1-sm w-70 w-100-sm m-t-xxl">
                         <div class="blog-author center-self-x-sm align-self-end w-35">
                             <div class="img-circle img-circle-container"><img class="img-circle-img" alt="image" src="static/img/profile-img.jpg" /></div>
                             <h5 class="m-t-lg text-center">Scott James</h5>
@@ -56,7 +56,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="page m-t-xxl">
+                    <div class="page flex-x m-t-xxl">
                         <div><i class="fa fa-eye"></i> Views</div>
                         <div><i class="fa fa-calendar"></i> Date</div>
                         <div><i class="fa fa-clock"></i> Read time</div>
@@ -76,7 +76,7 @@
             <div class="center-content-x">
                 <hr class="w-70 m-t-xxl">
             </div>
-            <div class="col-3" id="footer-wrapper">
+            <div class="col-3 col-1-sm" id="footer-wrapper">
                 <div class="center-content-xy-sm m-t-md m-b-xl">
                     <div>
                         <img class="w-50" id="footer-logo" src="static/img/byite-logo-color.svg"/>
