--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
             </div>
             <div id="page-wrapper">
                 <!-- Page 1 -->
-                <div class="page full-height col-2" id=page1>
+                <div class="page full-height col-2 col-1-sm" id="page1">
                     <div id="landing-text-wrapper">
                         <div>
                             <h1>Take a byite out of something new.</h1>
@@ -59,7 +59,7 @@
                 </div>
                 
                 <!-- Page 2 -->
-                <div class="page full-height" id=page2>
+                <div class="page full-height col-2 col-1-sm" id=page2>
                     <div id="capabilities-logos">
                         <div class="capability">
                             <div class="capability-text"><strong>AWS cloud</strong></div>
@@ -105,7 +105,7 @@
                 </div>
 
                 <!-- Page 3 -->
-                <div class="page col-2 full-height" id="page3">
+                <div class="page col-2 col-1-sm full-height" id="page3">
                     <div id="project-text-container">
                         <h1 id="projects-title">Our work</h1>
                         <div class="project-text" id="project-0-text">
@@ -138,7 +138,7 @@
                 </div>
 
                 <!-- Page 4 -->
-                <div class="page col-2 full-height" id="page4">
+                <div class="page col-2 col-1-sm full-height" id="page4">
                     <div class="hidden-md">
                         
                     </div>
@@ -169,7 +169,7 @@
                     </div>
                 </div>
 
-            <div class="col-3" id="footer-wrapper">
+            <div class="col-3 col-1-sm" id="footer-wrapper">
                 <div class="center-content-xy-sm m-t-md m-b-xl">
                     <div>
                         <img class="w-50" id="footer-logo" src="static/img/byite-logo-color.svg"/>
@@ -203,7 +203,7 @@
                     </p>
                     <div class="input-container">
                         <input class="input-field" type="text" placeholder="Email" name="email"/>
-                        <i class="fa fa-paper-plane-o fa-input-icon fa-input-icon-hover"></i>
+                        <i class="fa fa-paper-plane-o fa-input-icon fa-input-icon-hover center-self-y"></i>
                     </div>
                 </div>
             </div>
