--- a/blog-list.html
+++ b/blog-list.html
@@ -44,9 +44,14 @@
             </div>
             <div id="page-wrapper">
                 <div class="page p-t-xxl flex-y">
-                    <div class="blog-header col-2 w-70 w-100-sm m-t-xxl">
-                        <div class="blog-card flex-x">
-                            <div class="blog-card-text">
+                    <div class="blog-header w-100 m-t-xxl">
+                        <div class="center-content-y center-content-xy-sm">
+                            <div class="text-center-sm">
+                                <h1 class="no-m">Recent blogs</h1>
+                            </div>
+                        </div>
+                        <div class="col-2 col-1-sm m-t-xl center-content-y">
+                            <div class="blog-highlight w-50">
                                 <h3>Blog 1</h3>
                                 <p>Subheading</p>
                                 <div class="space-evenly">
@@ -55,32 +60,54 @@
                                     <small><i class="fa fa-clock"></i> 4 min. read</small>
                                 </div>
                             </div>
-                            <div class="blog-card-img">
-                                <div class="blog-card-img-overlay"></div>
-                                <img src="static/img/postgres-logo.svg"/>
-                            </div>
-                        </div>
-                        <div class="center-content-y center-content-xy-sm">
-                            <div class="text-center-sm">
-                                <h1 class="no-m">Recent blogs</h1>
+                            <div class="w-50">
                                 <div class="input-container">
                                     <input class="input-field" type="text" placeholder="Search blogs" name="search"/>
-                                    <i class="fa fa-search fa-input-icon fa-input-icon-hover"></i>
+                                    <i class="fa fa-search fa-input-icon fa-input-icon-hover center-self-y"></i>
+                                </div>
+                                <div>
+                                    Topics:
+                                    <ul class="tag-list">
+                                        <li>topic 1 sdf</li>
+                                        <li>topic 1 sdf</li>
+                                        <li>topic 1 topic 1</li>
+                                        <li>topic 1 sdfisbnd</li>
+                                        <li>topic 1</li>
+                                        <li>topic 1 topic 1 topic 1</li>
+                                    </ul>
                                 </div>
                             </div>
                         </div>
                     </div>
                 </div>
                 <div class="center-content-x">
-                    <hr class="w-70 m-t-xxl">
+                    <hr class="w-70 m-t-xxl m-b-xxl">
                 </div>
-                <div class="page blog-list col-3 col-2-md col-1-sm m-t-xxl">
-                    <div class="blog-card flex-x">
-                        <div class="blog-card-img">
-                            <div class="blog-card-img-overlay"></div>
-                            <img src="static/img/postgres-logo.svg"/>
+                <div class="page blog-list col-3 col-2-mdlg col-1-sm">
+                    <a class="text-muted" href="blogs.html">
+                        <div class="blog-card flex-x">
+                            <div class="blog-card-img-container center-content-xy">
+                                <div class="blog-card-img-overlay"></div>
+                                <img class="blog-card-img" src="static/img/kirkron-logo.svg"/>
+                            </div>
+                            <div class="blog-card-text-container">
+                                <h3>Blog 1</h3>
+                                <p><small>Subheading Subheading Subheadingading Subheading Subheading Subheading Subheading Subheading Subheading Subheading Subheading Subheading </small></p>
+                                <div class="space-evenly">
+                                    <small><i class="fa fa-user"></i> Scott James</small>
+                                    <small><i class="fa fa-calendar"></i> Date</small>
+                                    <small><i class="fa fa-clock"></i> 4 min. read</small>
+                                </div>
+                            </div>
                         </div>
-                        <div class="blog-card-text">
+                    </a>
+                    
+                    <div class="blog-card flex-x">
+                        <div class="blog-card-img-container center-content-xy">
+                            <div class="blog-card-img-overlay"></div>
+                            <img class="blog-card-img" src="static/img/postgres-logo.svg"/>
+                        </div>
+                        <div class="blog-card-text-container">
                             <h3>Blog 1</h3>
                             <p>Subheading</p>
                             <div class="space-evenly">
@@ -91,11 +118,11 @@
                         </div>
                     </div>
                     <div class="blog-card flex-x">
-                        <div class="blog-card-img">
+                        <div class="blog-card-img-container center-content-xy">
                             <div class="blog-card-img-overlay"></div>
-                            <img src="static/img/postgres-logo.svg"/>
+                            <img class="blog-card-img" src="static/img/postgres-logo.svg"/>
                         </div>
-                        <div class="blog-card-text">
+                        <div class="blog-card-text-container">
                             <h3>Blog 1</h3>
                             <p>Subheading</p>
                             <div class="space-evenly">
@@ -106,11 +133,26 @@
                         </div>
                     </div>
                     <div class="blog-card flex-x">
-                        <div class="blog-card-img">
+                        <div class="blog-card-img-container center-content-xy">
                             <div class="blog-card-img-overlay"></div>
-                            <img src="static/img/postgres-logo.svg"/>
+                            <img class="blog-card-img" src="static/img/postgres-logo.svg"/>
                         </div>
-                        <div class="blog-card-text">
+                        <div class="blog-card-text-container">
+                            <h3>Blog 1</h3>
+                            <p>Subheading</p>
+                            <div class="space-evenly">
+                                <small><i class="fa fa-user"></i> Scott James</small>
+                                <small><i class="fa fa-calendar"></i> Date</small>
+                                <small><i class="fa fa-clock"></i> 4 min. read</small>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="blog-card flex-x">
+                        <div class="blog-card-img-container center-content-xy">
+                            <div class="blog-card-img-overlay"></div>
+                            <img class="blog-card-img" src="static/img/postgres-logo.svg"/>
+                        </div>
+                        <div class="blog-card-text-container">
                             <h3>Blog 1</h3>
                             <p>Subheading</p>
                             <div class="space-evenly">
@@ -125,7 +167,7 @@
             <div class="center-content-x">
                 <hr class="w-70 m-t-xxl">
             </div>
-            <div class="col-3" id="footer-wrapper">
+            <div class="col-3 col-1-sm" id="footer-wrapper">
                 <div class="center-content-xy-sm m-t-md m-b-xl">
                     <div>
                         <img class="w-50" id="footer-logo" src="static/img/byite-logo-color.svg"/>
