refined blog-list page

--- a/blog-list.html
+++ b/blog-list.html
@@ -20,13 +20,12 @@
                 <div>
                     <div class="nav-wrapper">
                         <nav id="site-nav">
-                            <a class="nav-item" href="index.html#page3">Projects</a>
-                            <a class="nav-item" href="blog.html">Blog</a>
-                            <a class="nav-item nav-item-last" href="index.html#page4">Contact</a>
+                            <a class="nav-item text-muted" href="index.html#page3">Projects</a>
+                            <a class="nav-item text-muted" href="blog-list.html">Blog</a>
+                            <a class="nav-item nav-item-last text-muted" href="index.html#page4">Contact</a>
                         </nav>
                         <div id="nav-background">
                             <img id="mobile-nav-cookie" src="static/img/cookie-watermark-left.png"/>
-                            <img id=""/>
                         </div>
                     </div>
                     <div id="menu-toggle">
@@ -43,48 +42,48 @@
                 </div>
             </div>
             <div id="page-wrapper">
-                <div class="page p-t-xxl flex-y">
-                    <div class="blog-header w-100 m-t-xxl">
+                <div class="blog-header-container page page-padded flex-y">
+                    <div class="blog-header w-100 m-t-xxl m-b-xxl">
                         <div class="center-content-y center-content-xy-sm">
                             <div class="text-center-sm">
-                                <h1 class="no-m">Recent blogs</h1>
+                                <h1 class="no-m color-white">Recent blogs</h1>
                             </div>
                         </div>
-                        <div class="col-2 col-1-sm m-t-xl center-content-y">
-                            <div class="blog-highlight w-50">
-                                <h3>Blog 1</h3>
-                                <p>Subheading</p>
-                                <div class="space-evenly">
-                                    <small><i class="fa fa-user"></i> Scott James</small>
-                                    <small><i class="fa fa-calendar"></i> Date</small>
-                                    <small><i class="fa fa-clock"></i> 4 min. read</small>
+                        <div class="col-2 col-1-sm m-t-xl">
+                            <a href="blog.html">
+                                <div class="blog-highlight color-white w-100 no-p m-b-xl">
+                                    <h3 class="no-m">Blog 1</h3>
+                                    <p class="m-b-md">Subheading</p>
+                                    <div class="space-evenly">
+                                        <small><i class="fa fa-user"></i> Scott James</small>
+                                        <small><i class="fa fa-calendar"></i> Date</small>
+                                        <small><i class="fa fa-clock"></i> 4 min. read</small>
+                                    </div>
                                 </div>
-                            </div>
-                            <div class="w-50">
-                                <div class="input-container">
-                                    <input class="input-field" type="text" placeholder="Search blogs" name="search"/>
-                                    <i class="fa fa-search fa-input-icon fa-input-icon-hover center-self-y"></i>
+                                <div class="w-100 no-p m-b-xl">
+                                    <div>
+                                        <div class="input-container no-m m-b-lg">
+                                            <input class="input-field" type="text" placeholder="Search blogs" name="search"/>
+                                            <i class="fa fa-search fa-input-icon fa-input-icon-hover center-self-y"></i>
+                                        </div>
+                                        <div>
+                                            <p class="color-white m-b-md">Topics:</p>
+                                            <ul class="tag-list">
+                                                <a href=""><li><small class="color-white">topic 1 sdf</small></li></a>
+                                                <a href=""><li><small class="color-white">topic svd1 sdf</small></li></a>
+                                                <a href=""><li><small class="color-white">topic 1 sdf</small></li></a>
+                                                <a href=""><li><small class="color-white">topic v xcv1 sdf</small></li></a>
+                                                <a href=""><li><small class="color-white">topic 1dfvfsfvvsd sdf</small></li></a>
+                                            </ul>
+                                        </div>
+                                    </div>
                                 </div>
-                                <div>
-                                    Topics:
-                                    <ul class="tag-list">
-                                        <li>topic 1 sdf</li>
-                                        <li>topic 1 sdf</li>
-                                        <li>topic 1 topic 1</li>
-                                        <li>topic 1 sdfisbnd</li>
-                                        <li>topic 1</li>
-                                        <li>topic 1 topic 1 topic 1</li>
-                                    </ul>
-                                </div>
-                            </div>
+                            </a>
                         </div>
                     </div>
                 </div>
-                <div class="center-content-x">
-                    <hr class="w-70 m-t-xxl m-b-xxl">
-                </div>
-                <div class="page blog-list col-3 col-2-mdlg col-1-sm">
-                    <a class="text-muted" href="blogs.html">
+                <div class="page blog-list col-3 col-2-mdlg col-1-sm m-t-xxl">
+                    <a class="text-muted" href="blog.html">
                         <div class="blog-card flex-x">
                             <div class="blog-card-img-container center-content-xy">
                                 <div class="blog-card-img-overlay"></div>
