--- a/blog.html
+++ b/blog.html
@@ -20,13 +20,12 @@
                 <div>
                     <div class="nav-wrapper">
                         <nav id="site-nav">
-                            <a class="nav-item" href="index.html#page3">Projects</a>
-                            <a class="nav-item" href="blog.html">Blog</a>
-                            <a class="nav-item nav-item-last" href="index.html#page4">Contact</a>
+                            <a class="nav-item text-muted" href="index.html#page3">Projects</a>
+                            <a class="nav-item text-muted" href="blog-list.html">Blog</a>
+                            <a class="nav-item nav-item-last text-muted" href="index.html#page4">Contact</a>
                         </nav>
                         <div id="nav-background">
                             <img id="mobile-nav-cookie" src="static/img/cookie-watermark-left.png"/>
-                            <img id=""/>
                         </div>
                     </div>
                     <div id="menu-toggle">
